Mod table:machine_description_remote @main.tex
Add memory, netword card, OS part

--- a/main.tex
+++ b/main.tex
@@ -1073,15 +1073,15 @@ Qiheng Wang:
                                          & Track to track seek time              & 1ms typical                                                    \\ \cline{2-3}
                                          & I/O data transfer rate                & 2400 Mbytes/s max                                               \\
         \hline
-        \multirow{3}{*}{Memory}          & Capacity                              & Dual channel(symetric), each 1024 MBytes                       \\ \cline{2-3}
-                                         & Frequency                             & DDR3 PC3-10700 667 MHz                                         \\ \cline{2-3}
+        \multirow{3}{*}{Memory}          & Capacity                              & Dual channel(symetric), each 2048 MBytes                       \\ \cline{2-3}
+                                         & Frequency                             & DDR3 PC3-10700 1067 MHz                                         \\ \cline{2-3}
                                          & Width                                 & 64 bit per channel                                             \\
         \hline
-        \multirow{2}{*}{Network Card}    & Model                                 & marvell yukon 88e8055                                          \\ \cline{2-3}
+        \multirow{2}{*}{Network Card}    & Model                                 & JMC250 PCI Express Gigabit Ethernet Controller                 \\ \cline{2-3}
                                          & Data Transfer Rate                    & 10/100/1000Mbps                                                \\
         \hline
-        \multicolumn{1}{|>{\bfseries}c|}{\multirow{2}{*}{OS}} & \multirow{2}{*}{ Linux Distribution } & Ubuntu 12.04.4 LTS                        \\
-                                                              & \multicolumn{1}{c|}{}                 & GNU/Linux 3.8.0-35-generic i686           \\
+        \multicolumn{1}{|>{\bfseries}c|}{\multirow{2}{*}{OS}} & \multirow{2}{*}{ Linux Distribution } & Linux Mint 15 Olivia                        \\
+                                                              & \multicolumn{1}{c|}{}                 & GNU/Linux 3.8.0-35-generic x86\_64           \\
   % here if use |c| instead of c|, will generate an extra vertical line
         \hline
       \end{tabular}
